<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NUMAD22Sp_YingShen</string>
    <string name="about_me">About Me</string>
    <string name="a">A</string>
    <string name="e">E</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="clickyclicky" />
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="title_activity_about_me">AboutMe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ying_shen">Ying Shen</string>
    <string name="shen_ying_northeastern_edu">shen.ying@northeastern.edu</string>
    <string name="link_collector">Link Collector</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="website_name">Website Name</string>
    <string name="http">http://</string>
    <string name="find_my_location">Find My Location</string>
    <string name="shen_ying_n_northeastern_edu">shen.ying\n@northeastern.edu</string>
    <string name="show_my_current_location">Show My Current Location</string>
    <string name="location">Location:</string>
    <string name="at_your_service">At Your Service</string>
    <string name="_0_f">0 F</string>
    <string name="city">city</string>
    <string name="_0_f_">0 °F</string>
    <string name="find_current_weather">Find Current Weather</string>
    <string name="type">type</string>
    <string name="_72">72 ℉</string>
    <string name="sunny">Sunny</string>
    <string name="san_jose">San Jose</string>
    <string name="weather_type">weather_type</string>
</resources>